# IUM

./: dbscan.py  main.ipynb  main.py  pyproject.toml
data/analysis/: price_spreads.csv
data/predictions/: predictions.csv
data/processed/: dataset.csv  preprocessed.csv
data/raw/: listings.csv
models/: linear_pipeline.joblib
notebooks/: intro.ipynb  intro_00.ipynb  microservice_AB_04.ipynb  models_03.ipynb  preprocessing_01.ipynb  preprocessing_01_listings.ipynb  preprocessing_02.ipynb  preprocessing_02_sessions.ipynb
scripts/: prepare_data.py
src/: amenities_correlation.py  builder.py  dataset.py  dbscan.py  features.py  model.py  pipeline.py  preprocess.py  preprocessing_pipeline.py  preprocessor.py  selector.py  transformations.py  visualize_results.py
src/models/: forest.py
src/service/: app.py  logger.py  model.py
src/transformations/: features.py  listings.py  mark_noise.py  sessions.py  target.py
src/visualizations/: dbscan.py  feature_importance.py  results.py
