[project]
name = "ium"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "contractions>=0.1.73",
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "textblob>=0.19.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]

[tool.basedpyright]
typeCheckingMode = "basic"
